# switch-rom-manager

./: INSTALL.bat  README.md  SETUP.ps1  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.cong.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
